--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,7 +25,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        python manage.py makemigrations
+    - name: Setup database
+      run: | 
+        cd server
+         python manage.py makemigrations
         
     - name: Run Tests
       run: |
