freeze pillow requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,14 +18,22 @@ djangochannelsrestframework==1.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 djoser==2.2.0
+flake8==6.0.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
+markdown-it-py==3.0.0
+mccabe==0.7.0
+mdurl==0.1.2
 msgpack==1.0.5
 oauthlib==3.2.2
+Pillow==10.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pycodestyle==2.10.0
 pycparser==2.21
+pyflakes==3.0.1
+Pygments==2.15.1
 PyJWT==2.8.0
 pyOpenSSL==23.2.0
 python3-openid==3.2.0
@@ -33,6 +41,7 @@ pytz==2023.3
 redis==4.6.0
 requests==2.31.0
 requests-oauthlib==1.3.1
+rich==13.4.2
 service-identity==23.1.0
 six==1.16.0
 social-auth-app-django==5.2.0
